2007-07-13  J. Tang  <jtang@tresys.com>

	* Java SWIG libraries now check if the libraries needs to be
	loaded before doing such.

	* Added more filtering options to libseaudit.

2007-07-12  J. Tang  <jtang@tresys.com>

	* seaudit_filter_set_ipaddress() is renamed to
	seaudit_filter_set_anyaddr().  seaudit_filter_set_port() is now
	seaudit_filter_set_anyport().  Similar changes occurred to the
	respective accessors.

2007-07-11  M. Goldman  <mgoldman@tresys.com>

	* Split functions relating to item records out into their own
	  file.  Added documentation for same.

2007-07-09  J. Tang  <jtang@tresys.com>

	* Added additional sort constructors to libseaudit.

2007-07-05  J. Tang  <jtang@tresys.com>

	* seaudit now has a button to clear all messages from a view.
	This is useful when doing log monitoring, to show only new
	messages.

	* Added seaudit_model_hide_message(), to suppress display of
	certain messages within a model.

2007-06-28  J. Tang  <jtang@tresys.com>

	* Updated apol and sediffx to delay loading neverallow rules
	unless the user requested analyzing them.

2007-06-25  J. Tang  <jtang@tresys.com>

	* Updated apol(1) to use new libsefs

	* Updated replcon(1) to use new libsefs.

2007-06-19  J. Tang  <jtang@tresys.com>

	* Updated indexcon(1) to use new libsefs.

	* Merged searchcon(1) functionality into findcon(1); man pages
	updated.  searchcon(1) has been removed from SETools.

	* libsefs.so.4 is now wrapped by SWIG, for Python, Java, and
	Tcl.

	* Rewrite of libsefs to meet coding standards.  libsefs.so.4 is an
	object-oriented library that abstracts away filesystems,
	file_contexts files, and databases into a unified object that can
	be queried easily.

2007-06-18  J. Tang  <jtang@tresys.com>

	* libpoldiff/include/poldiff/rbac_diff.h: Added
	poldiff_role_allow_get_unmodified_roles().  The return values
	poldiff_role_allow_get_added_roles() and
	poldiff_role_allow_get_removed_roles() have been changed for forms